--- a/src/app/components/graficas/graficas.component.html
+++ b/src/app/components/graficas/graficas.component.html
@@ -5,7 +5,7 @@
   <div class="flex">
     <div class="flex-item">
       <div style="display: block;">
-        <canvas baseChart width="400" height="400"
+      <canvas baseChart width="400" height="400"
                   [datasets]="lineChartData"
                   [labels]="lineChartLabels"
                   [options]="lineChartOptions"
@@ -15,6 +15,16 @@
                   [plugins]="lineChartPlugins"
                   (chartHover)="chartHovered($event)"></canvas>
       </div>
+    </div>
+    <div class="flex-item">
+      <table class="table table-responsive table-condensed">
+        <tr>
+          <th *ngFor="let label of lineChartLabels">{{label}}</th>
+        </tr>
+        <tr *ngFor="let d of lineChartData; let i=index" [class]="'line-'+i">
+          <td *ngFor="let label of lineChartLabels; let j=index">{{d && d.data[j]}}</td>
+        </tr>
+      </table>
     </div>
   </div>
 </div>
