--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -10,17 +10,20 @@
           <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/grafica">Graficos</a>
+          <a class="nav-link" routerLink="/grafica">Grafica</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/tabla">Tablas</a>
+          <a class="nav-link" routerLink="/tabla">Tabla</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/tablapos">Tabla posiciones</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="">Cerrar sesion</a>
         </li>
       </ul>
       <span class="navbar-text">
-        Proyecto fase 2 Bases de datos 2 G34
+        Proyecto fase 2 Bases de datos 2 G14
       </span>
     </div>
   </nav>
