--- a/src/app/components/tabla-puestos/tabla-puestos.component.html
+++ b/src/app/components/tabla-puestos/tabla-puestos.component.html
@@ -1,5 +1,5 @@
 <app-navigation-bar></app-navigation-bar>
-<!--<p>tabla works!</p>-->
+<!--<p>tabla-puestos works!</p>-->
 <div class="flex">
     <div class="flex-item">
     <div class="flex-item">
