--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -23,7 +23,7 @@
                         <input type="password" name="Usuariocontrasenia" placeholder="*******" rows="1" class="form-control" [(ngModel)]="passcode">
                     </div>
                     <div class="form-group">
-                        <button class="btn btn-primary" (click)="Ingresar()">Ingresar</button>
+                        <button class="btn btn-primary" (click)="Ingresar()">Ingreso</button>
                     </div>
                 </form>
             </div>
