pagina ingreso datos

--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -19,6 +19,9 @@
           <a class="nav-link" routerLink="/tablapos">Tabla posiciones</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/ingresoDatos">Cargar datos</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="">Cerrar sesion</a>
         </li>
       </ul>
